--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ datasources:
 
 meta-server:
   cache.folder: "./cache"
+  dbip.api.key: "disabled" # DB IP is broken for now
   table.name: "servers"
   module:
     metadataFileNames:
@@ -26,4 +27,3 @@ meta-server:
         repo-name: virtual-repo-live
         group: org/terasology/modules
         cache-folder: cache
-
