--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,22 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.4'
     implementation 'org.terasology:gestalt-module:4.1.2'
     implementation 'com.google.guava:guava:18.0'
+
+    //// Tests
+    testAnnotationProcessor(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
+    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
+    testImplementation(enforcedPlatform("io.micronaut:micronaut-bom:$micronautVersion"))
+
+    //Junit 5
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testImplementation("org.junit.jupiter:junit-jupiter-params")
+    testImplementation("io.micronaut.test:micronaut-test-junit5")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+
+    // html validation
+    testImplementation 'org.jsoup:jsoup:1.15.2'
+    testImplementation 'com.jcabi:jcabi-w3c:1.4.0'
+    testImplementation 'com.jcabi:jcabi-matchers:1.5.3'
 }
 
 application {
@@ -136,3 +152,8 @@ distributions {
 }
 
 task stage(dependsOn: ['clean', 'installDist'])
+
+// Don't let tests break the build, we'll just make it as unstable in Jenkins
+test {
+    ignoreFailures = true
+}
